// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots should render error page 1`] = `
<DocumentFragment>
  <main>
    Error
  </main>
</DocumentFragment>
`;

exports[`App snapshots should render initializer 1`] = `
<DocumentFragment>
  <main>
    Init
  </main>
</DocumentFragment>
`;

exports[`App snapshots should render router 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp"
    data-test-box=""
  >
    <div
      class="css-1rzc7eb"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp MouseModes MouseModes--light"
        data-test-box=""
      >
        <div
          class="css-1jnxvbp MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="menu"
            height="16"
            name="Logo"
            width="16"
          />
        </div>
        <div
          class="css-1jnxvbp MouseModes__button MouseModes__button--light MouseModes__button--active MouseModes__button--active--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="default"
            height="16"
            name="MoveTool"
            width="16"
          />
        </div>
        <div
          class="css-1jnxvbp MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="move"
            height="16"
            name="MoveHand"
            width="16"
          />
        </div>
        <div
          class="css-1jnxvbp MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="comment"
            height="16"
            name="Comment"
            width="16"
          />
        </div>
        <div
          class="css-1jnxvbp MouseModes__button MouseModes__button--light"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="toolBeltA"
            height="16"
            name="FrameTool"
            width="16"
          />
        </div>
      </div>
    </div>
    <div
      class="css-w7unf8 PanelProperties PanelProperties--light"
      data-test-box="panel-properties"
      id="panelProperties"
      style="width: 240px;"
    >
      <div
        class="PanelProperties__area-handle-resize PanelProperties__area-handle-resize--light"
        data-test-resize=""
      />
      <div
        class="css-1jnxvbp Section Section--light"
        data-test-section=""
      >
        <div
          class="Section__header Section__header--light"
        >
          <small
            class="css-1jnxvbp Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
            data-test-text=""
            style="text-align: inherit;"
          >
            Mode
          </small>
          <div
            class="Section__buttons Section__buttons--light"
          />
        </div>
        <div
          class="css-1jnxvbp Tabs Tabs--light"
          data-test-box=""
        >
          <div
            class="Tabs__tab Tabs__tab--light Tabs__tab--active Tabs__tab--active--light"
            data-test-tab="design"
          >
            Design
          </div>
          <div
            class="Tabs__tab Tabs__tab--light"
            data-test-tab="prototype\`,"
          >
            Prototype
          </div>
        </div>
      </div>
      <div
        class="PanelProperties__sections PanelProperties__sections--light"
      >
        <div
          class="css-1jnxvbp Section Section--light"
          data-test-section=""
        >
          <div
            class="Section__header Section__header--light"
          >
            <small
              class="css-1jnxvbp Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
              data-test-text=""
              style="text-align: inherit;"
            >
              Page
            </small>
            <div
              class="Section__buttons Section__buttons--light"
            />
          </div>
          <div
            class="css-1jnxvbp SectionColumn SectionColumn--light"
            data-test-section=""
          >
            <div
              class="SectionColumn__labels SectionColumn__labels--light"
              style="width: calc(100% - 24px - 0px - 8px);"
            />
            <div
              class="SectionColumn__wrapper SectionColumn__wrapper--light"
            >
              <div
                class="SectionColumn__content SectionColumn__content--light SectionColumn__content--single SectionColumn__content--single--light"
                style="width: calc(100% - 24px - 0px - 8px);"
              >
                <div
                  class="css-1jnxvbp FieldGroup FieldGroup--light"
                  data-test-field-group=""
                >
                  <div
                    class="css-1jnxvbp ColorPicker__hexInput ColorPicker__hexInput--light TextField TextField--light"
                    data-test-text-field="color"
                  >
                    <div
                      aria-describedby="test-id"
                    >
                      <div
                        class="css-1jnxvbp Color Color--light"
                        data-test-color=""
                      >
                        <div
                          class="Color__picker Color__picker--light"
                          style="background-color: rgb(241, 242, 246);"
                        />
                        <div
                          class="Color__picker-alpha Color__picker-alpha--light"
                          style="background-color: rgb(241, 242, 246);"
                        />
                        <div
                          class="Color__picker-texture Color__picker-texture--light"
                        />
                      </div>
                    </div>
                    <input
                      class="TextField__input TextField__input--light"
                      data-test-text-field-input="color"
                      maxlength="6"
                      value="f1f2f6"
                    />
                  </div>
                  <div
                    class="css-1jnxvbp ColorPicker__alphaInput ColorPicker__alphaInput--light TextField TextField--light"
                    data-test-text-field="alpha"
                  >
                    <input
                      class="TextField__input TextField__input--light"
                      data-test-text-field-input="alpha"
                      max="100"
                      maxlength="6"
                      min="0"
                      type="number"
                      value="100"
                    />
                    <div
                      class="ScrubbableInput ScrubbableInput--light"
                      data-test-scrubbable-input=""
                    >
                      <div
                        class="ColorPicker__alphaInputUnit ColorPicker__alphaInputUnit--light"
                      >
                        %
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="SectionColumn__buttons SectionColumn__buttons--light"
              >
                <div
                  class="css-1jnxvbp ButtonIcon ButtonIcon--light"
                  data-test-button-icon=""
                >
                  <div
                    class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="eyes-opened"
                    height="14"
                    name="EyesOpened"
                    width="14"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-117yijb ViewBox ViewBox--light ZoomBox ZoomBox--light ZoomBox--idle ZoomBox--idle--light ZoomBox--default ZoomBox--default--light"
      data-test-box="zoom-box"
      tabindex="0"
    >
      <div
        class="css-1jnxvbp ZoomBox__backgroundMask ZoomBox__backgroundMask--light"
        data-test-box=""
        style="background-color: rgb(241, 242, 246); display: initial;"
      />
      <div
        class="css-1jnxvbp ZoomBox__textureBlank ZoomBox__textureBlank--light"
        data-test-box=""
        style="transform: translate(0px, 0px) scale(1);"
      />
      <div
        class="css-1j4c14e ZoomBox__zoomContent ZoomBox__zoomContent--light"
        data-test-box=""
        id="zoomContentId"
        style="transform: translate(0px, 0px) scale(1);"
      >
        <div
          class="css-u5h2b"
          data-test-box=""
          id="overlayContainer"
          style="z-index: var(--xd-page-builder-zindex-overlay-container);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
